# leap-year-kata

./: .gitignore  README.md  pyproject.toml
intro_to_ak_way/: leap_years.py
tests/: test_leap_years.py
